--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 
 <div style="position: absolute ;z-index: 9999" id="mainDiv">
 	
-	<audio autoplay>
-			<source src="music/zhumengshi.mp3"/>
-	</audio>  
+	<audio autoplay="autoplay">
+<source src="http://m10.music.126.net/20200212142349/2e9a59f3e3c0afb503430600579554bc/ymusic/3b9e/c8c4/090b/45b3fa6090b33b79fd425ba166540c32.mp3" type="audio/mpeg">
+</audio>
 
 	<div id="content">
 
