--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
 
-	<title>送给我亲爱的张萌</title>
+	<title>For Miss.zhang</title>
 
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 
