--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@
 				<canvas id="garden"></canvas>
 				<div id="words">
 					<div id="messages">
-						Miss.zhang,I LOVE YOU！
+						Miss.Zhang,I LOVE YOU！
 						<div id="elapseClock"></div>
 					</div>
 					<div id="loveu">
 						Love u forever and ever.<br/>
-						<div class="signature">- Mr.zhang</div>
+						<div class="signature">- Mr.Zhang</div>
 					</div>
 				</div>
 			</div>
