--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 				<span class="space"/>我们的故事<br />
 				<span class="space"/>会伴着这颗用心做成的专属于我们的时钟一起<br />
 				<span class="space"/>直到永远<br />
-				<span class="space"/><span class="space"></span>永远<br />
+				<span class="space"/>永远<br />
 				
 				<br />
 			</div>
